# duopulse

./: .clangd  .cursorignore  .gitignore  .gitmodules  AGENTS.md  BUILD_SUCCESS.md  CLAUDE.md  LICENSE  Makefile  NOTES.md  QUICKSTART.md  README.md  setup.sh
.claude/: hooks.json
.cursor/: rules
.superset/: README.md
docs/: SDD_WORKFLOW.md  SDD_WORKFLOW_OVERVIEW.md  V4_HARDWARE_QA.md  implementation.md  patterns.html  patterns.summary.txt  spec.md
inc/: algorithm_config.h  config.h
metrics/: README.md  baseline.json  ensemble-config.json  iteration-lessons.json  sensitivity-matrix.json  sweep-config.json
scripts/: compare-metrics.js  evaluate-expressiveness.py  extract-metrics-history.js  generate-baseline.py  generate-pattern-html.py  generate-weights-header.py  generate_manual.sh  sdd-check-sdd  sdd-create-task  sdd-next-task  tag-baseline.sh  update-baseline.js
scripts/pattern-viz-debug/: .gitignore  SPEC.md  evaluate_patterns.py  pyproject.toml
scripts/pattern-viz-debug/src/pattern_viz/: __init__.py  archetypes.py  cli.py  euclidean.py  gumbel_sampler.py  hit_budget.py  output.py  pattern_field.py  pipeline.py  types.py  velocity.py
scripts/pattern-viz-debug/tests/: conftest.py  test_archetypes.py  test_euclidean.py  test_gumbel_sampler.py  test_hit_budget.py  test_pipeline.py  test_velocity.py
site/: index.html  styles.css
src/: main.cpp  main.cpp.example
tests/: .clangd  pattern_viz_test.cpp  probe_variation.cpp  shape_test_params.json  test_accent_velocity.cpp  test_algorithm_weights.cpp  test_aux_gesture.cpp  test_axis_biasing.cpp  (+28 more)
(+470 files in other folders)
