[project]
name = "pattern-viz"
version = "0.1.0"
description = "DuoPulse v4 pattern generation visualization and debug tool"
readme = "SPEC.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "click>=8.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
midi = [
    "midiutil>=1.2.0",
]
audio = [
    "soundfile>=0.12.0",
]

[project.scripts]
pattern-viz = "pattern_viz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pattern_viz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
